objects/BLN_Badge_Style__c.object
<CustomObject>
    <fields>
        <fullName>Data__c</fullName>
        <label>Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DefaultOnsiteBadge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DefaultOnsiteBadge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>BLN_Event__c</referenceTo>
        <relationshipLabel>BLN Badge Styles</relationshipLabel>
        <relationshipName>BLN_Badge_Styles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_Default_Badge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Default Badge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <label>Module</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Printer__c</fullName>
        <label>Printer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BLN Badge Style</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Event__c</columns>
        <columns>NAME</columns>
        <columns>Data__c</columns>
        <columns>Description__c</columns>
        <columns>Module__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Badge ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN Badge Styles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>